# thelook_ecommerce_analysis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
conf/: README.md  logging.yml
conf/base/: catalog.yml  parameters.yml
docker/postgres/: Dockerfile  init.sql
junit/: test-results.xml
models/deepseek/: Modelfile
src/thelook_ecommerce_analysis/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/thelook_ecommerce_analysis/pipelines/data_ingestion/: nodes.py  pipeline.py
src/thelook_ecommerce_analysis/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/thelook_ecommerce_analysis/utils/: get_params.py  partial_func.py
tests/: conftest.py
tests/integration/: test_postgres_integration.py
tests/kedro_settings/: test_hooks.py  test_settings.py
tests/pipelines/data_ingestion/: test_nodes.py  test_pipeline.py
tests/pipelines/data_processing/: test_nodes.py  test_pipeline.py
tests/utils/: test_get_params.py  test_partial_func.py
